--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,19 @@ android {
 
 dependencies {
 
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation 'com.squareup.okhttp3:okhttp:4.7.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
+
+    debugImplementation "com.github.chuckerteam.chucker:library:4.0.0"
+
+    implementation'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+    implementation'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+    implementation'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
+
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
